--- a/androidnetworkingservicemnv_expo/app/src/main/res/layout/activity_arith.xml
+++ b/androidnetworkingservicemnv_expo/app/src/main/res/layout/activity_arith.xml
@@ -12,20 +12,67 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:id="@+id/background" android:visibility="visible"
             android:backgroundTint="@color/black"/>
+
     <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent" tools:src="@color/white" android:id="@+id/flashView"
             android:background="@color/white" android:visibility="invisible" android:adjustViewBounds="false"
             android:layout_marginTop="0dp" android:layout_marginStart="0dp" android:layout_marginEnd="0dp"
             android:layout_marginBottom="0dp"/>
+
     <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent" android:id="@+id/arithTextView"
+            android:layout_height="match_parent"
+            android:id="@+id/arithTextView"
             android:textColor="@color/white"
-            android:visibility="invisible" android:textSize="200sp"
-            android:layout_alignParentTop="true" android:layout_alignParentBottom="true"
-            android:text="9+7" android:layout_marginTop="0dp"
-            android:layout_marginBottom="0dp" android:textAlignment="center"
+            android:visibility="invisible"
+            android:textSize="200sp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:text="9+7"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="100dp"
+            android:textAlignment="center"
             android:gravity="center|center_horizontal|center_vertical"/>
 
+    <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_below="@id/arithTextView"
+            android:layout_marginTop="-100dp">
+
+        <TableRow android:id="@+id/tableRow1"
+                  android:layout_height="100dp"
+                  android:layout_width="match_parent">
+
+            <Button android:id="@+id/answerButton1"
+                    android:layout_height="100dp"
+                    android:layout_weight=".25"
+                    android:backgroundTint="@color/grey"
+                    android:textColor="@color/white"
+                    android:text="1"/>
+
+            <Button android:id="@+id/answerButton2"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".25"
+                    android:backgroundTint="@color/grey"
+                    android:textColor="@color/white"
+                    android:text="2"/>
+
+            <Button android:id="@+id/answerButton3"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".25"
+                    android:backgroundTint="@color/grey"
+                    android:textColor="@color/white"
+                    android:text="3"/>
+
+            <Button android:id="@+id/answerButton4"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".25"
+                    android:backgroundTint="@color/grey"
+                    android:textColor="@color/white"
+                    android:text="4"/>
+
+        </TableRow>
+    </TableLayout>
 </RelativeLayout>
