--- a/androidnetworkingservicemnv_expo/app/src/main/res/layout/activity_arith.xml
+++ b/androidnetworkingservicemnv_expo/app/src/main/res/layout/activity_arith.xml
@@ -41,9 +41,11 @@
             android:layout_below="@id/arithTextView"
             android:layout_marginTop="-100dp">
 
-        <TableRow android:id="@+id/tableRow1"
-                  android:layout_height="100dp"
-                  android:layout_width="match_parent">
+        <TableRow
+            android:id="@+id/tableRow1"
+            android:layout_height="100dp"
+            android:layout_width="match_parent"
+            android:visibility="invisible">
 
             <Button android:id="@+id/answerButton1"
                     android:layout_height="100dp"
