--- a/androidnetworkingservicemnv_expo/app/src/main/res/layout/activity_arith.xml
+++ b/androidnetworkingservicemnv_expo/app/src/main/res/layout/activity_arith.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
                 android:id="@+id/layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="0dp" android:keepScreenOn="true" android:visibility="visible"
+                android:layout_margin="0dp"
+                android:keepScreenOn="true"
+                android:visibility="visible"
                 android:gravity="center">
 
     <ImageView
