--- a/androidnetworkingservicemnv_expo/app/src/main/res/layout/activity_arith.xml
+++ b/androidnetworkingservicemnv_expo/app/src/main/res/layout/activity_arith.xml
@@ -38,21 +38,10 @@
             android:textAlignment="center"
             android:gravity="center|center_horizontal|center_vertical"/>
 
-    <ProgressBar
-        android:id="@+id/progressbar"
-        android:layout_width="match_parent"
-        android:layout_height="25dp"
-        android:layout_marginBottom="100dp"
-        android:layout_above="@id/tableLayout"
-        android:max="100"
-         style="@android:style/Widget.ProgressBar.Horizontal"
-        android:scrollbarStyle="insideInset" />
-
     <TableLayout
-        android:id="@+id/tableLayout"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_below="@+id/arithTextView"
+            android:layout_below="@id/arithTextView"
             android:layout_marginTop="-100dp">
 
         <TableRow
